--- a/css/styles.css
+++ b/css/styles.css
@@ -1,184 +1,12 @@
-/*
-.linkNav {
-    margin-left: 1rem;
-    margin-right: 1rem;
-    text-decoration: none;
-    color: rgb(255, 255, 255);
-    font-size: x-large;
-}
-
-
-.fondoAgua {
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-image: linear-gradient(rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)), url(../assets/Images/agua.jpg);
-    text-align: center;
-    color: rgb(255, 255, 255);
-    padding-top: 8rem;
-    padding-bottom: 8rem;
-    margin-bottom: 5rem;
-    }
-
-.poolClean {
-    flex-wrap: wrap;
-    display: flex;
-    font-size: 3rem;
-    justify-content: center;
-} 
-
-.empresa {
-    padding: 2rem;
-    font-size: 1.5rem;
-}
-
-.texto{
-    text-align: center;
-    color: white;
-    padding-top: 4rem;
-    padding-bottom: 4rem;
-    font-size: xx-large;
-    font-weight: lighter;
-    border-top: 2px solid white;
-    border-bottom: 2px solid white;
-}
-
-.tarjetaLimpiezas{
-    background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url(../assets/Images/limpiezascard2.jpg);
-    padding: 3rem;
-    background-repeat: no-repeat;
-    background-size: cover;
-    border: 0;
-    transition: all 2s;
-}
-
-.tituloCard{ 
-    font-weight: lighter;
-    font-size: xx-large;
-    text-align: center;
-    color: rgb(255, 255, 255);
-}
-
-.parrafoCard{
-    margin-top: 2rem;
-    font-size: x-large;
-    font-weight: lighter;
-    text-align: center;
-    color: rgb(255, 255, 255);
-}
-
-@media (max-width:540px){
-    .parrafoCard{
-        margin-top: 2rem;
-        font-size: large;
-        font-weight: lighter;
-        text-align: center;
-        color: rgb(255, 255, 255); 
-    }
-}
-
-.tarjetaLimpiezas:hover{
-    transform: scale(1.1);
-    border-radius: 2rem;
-}
-
-@media (max-width: 1200px){
-    .tarjetaLimpiezas{
-        background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url(../assets/Images/agua.jpg);
-        background-repeat: no-repeat;
-        background-size:cover ;
-        border: 0;
-        transition: all 2s;
-        padding: 3rem;
-    }
-}
-
-.tarjetaMantenimientos{
-    background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url(../assets/Images/manteniminetocard2.jpg);
-    padding: 3rem;
-    background-repeat: no-repeat;
-    background-size: cover;
-    border: 0;
-
-    transition: all 2s;
-}
-
-.tarjetaMantenimientos:hover{
-    transform: scale(1.1);
-    border-radius: 2rem;
-}
-
-@media (max-width:1200px){
-    .tarjetaMantenimientos{
-        background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url(../assets/Images/agua.jpg);
-    padding: 3rem;
-    background-repeat: no-repeat;
-    background-size: cover;
-    border: 0;
-    margin-bottom: 5rem;
-    transition: all 2s;
-    }
-
-}
-
-.tarjetaProductos{
-    background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url(../assets/Images/Productoscard2.jpg);
-    padding: 3rem;
-    background-repeat: no-repeat;
-    background-size: cover;
-    border: 0;
-    transition: all 2s;
-}
-
-.tarjetaProductos:hover{
-    transform: scale(1.1);
-    border-radius: 2rem;
-}
-
-@media (max-width:1200px){
-    .tarjetaProductos{
-        background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url(../assets/Images/agua.jpg);
-        padding: 3rem;
-        background-repeat: no-repeat;
-        background-size: cover;
-        border: 0;
-        transition: all 2s; 
-    }
-
-.fondoFooter{
-    padding: 2rem;
-    background-image: linear-gradient(rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.8));}
-}
-.estiloLink{
-    border-radius: 1rem;
-    background-color: rgba(255, 255, 255, 0.061);
-    padding: 1rem;
-    margin: auto;
-}
-
-.linkFooter{
-    text-decoration: none;
-    color: white;
-    font-weight: lighter;
-    font-size: larger;
-}
-
-.textoFooter{
-    font-weight: lighter;
-    display: block;
-    margin: auto;
-    border-radius: 1rem;
-    padding: 1rem;
-    color: white;
-    text-align: center;
-}
-*/
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box; }
 
 main {
-  background-color: rgba(1, 0, 41, 0.35); }
+  background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url(../assets/Images/agua2.jpg);
+  background-size: cover;
+  background-repeat: no-repeat; }
 
 header .linkNav {
   margin-left: 1rem;
@@ -224,9 +52,9 @@ main .container .row .texto {
 
 main .container .row .tarjetaLimpiezas {
   background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url(../assets/Images/limpiezascard2.jpg);
-  padding: 3rem;
   background-repeat: no-repeat;
   background-size: cover;
+  padding: 3rem;
   border: 0;
   transition: all 2s; }
   main .container .row .tarjetaLimpiezas .tituloCard {
@@ -256,8 +84,6 @@ main .container .row .tarjetaLimpiezas {
 @media (max-width: 1200px) {
   main .container .row .tarjetaLimpiezas {
     background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url(../assets/Images/agua.jpg);
-    background-repeat: no-repeat;
-    background-size: cover;
     border: 0;
     transition: all 2s;
     padding: 3rem; } }
@@ -268,9 +94,9 @@ main .tarjetaLimpiezas:hover {
 
 main .container .row .tarjetaMantenimientos {
   background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url(../assets/Images/manteniminetocard2.jpg);
-  padding: 3rem;
   background-repeat: no-repeat;
   background-size: cover;
+  padding: 3rem;
   border: 0;
   transition: all 2s; }
   main .container .row .tarjetaMantenimientos .tituloCard {
@@ -300,8 +126,6 @@ main .container .row .tarjetaMantenimientos {
 @media (max-width: 1200px) {
   main .container .row .tarjetaMantenimientos {
     background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url(../assets/Images/agua.jpg);
-    background-repeat: no-repeat;
-    background-size: cover;
     border: 0;
     transition: all 2s;
     padding: 3rem; } }
@@ -312,9 +136,9 @@ main .tarjetaMantenimientos:hover {
 
 main .container .row .tarjetaProductos {
   background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url(../assets/Images/Productoscard2.jpg);
-  padding: 3rem;
   background-repeat: no-repeat;
   background-size: cover;
+  padding: 3rem;
   border: 0;
   transition: all 2s; }
   main .container .row .tarjetaProductos .tituloCard {
@@ -344,8 +168,6 @@ main .container .row .tarjetaProductos {
 @media (max-width: 1200px) {
   main .container .row .tarjetaProductos {
     background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url(../assets/Images/agua.jpg);
-    background-repeat: no-repeat;
-    background-size: cover;
     border: 0;
     transition: all 2s;
     padding: 3rem; } }
