--- a/css/styles.css
+++ b/css/styles.css
@@ -1,7 +1,11 @@
 * {
   margin: 0;
   padding: 0;
-  box-sizing: border-box; }
+  box-sizing: border-box;
+  font-family: 'Open Sans', sans-serif; }
+
+body {
+  font-family: 'Open Sans', sans-serif; }
 
 main {
   background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url(../assets/Images/agua2.jpg);
@@ -19,7 +23,6 @@ header .linkNav:hover {
   color: #626262; }
 
 main .fondoAgua {
-  background-image: linear-gradient(rgba(0, 0, 0, 0.09), rgba(0, 0, 0, 0.09));
   text-align: center;
   color: white;
   padding-top: 8rem;
@@ -298,3 +301,24 @@ main .container .row .textoContacto {
   font-weight: lighter;
   border-top: 2px solid white;
   border-bottom: 2px solid white; }
+
+.main404 {
+  height: 100vh; }
+  .main404 .contenedor {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    height: 100vh; }
+    .main404 .contenedor .img404 {
+      width: 30rem;
+      margin-bottom: 3rem; }
+    .main404 .contenedor .titulo404 {
+      color: white;
+      font-size: 30px;
+      padding: 3rem; }
+
+@media (max-width: 540px) {
+  .main404 .contenedor .titulo404 {
+    text-align: center;
+    font-size: 25px; } }
